# newsletter-api

./: .env  .gitignore  Cargo.toml  README.md  configuration.yaml
.github/workflows/: build.yml
migrations/: 20240205131506_create_subscriptions_table.sql  20240311123847_add_status_to_existing_subscription_record.sql  20240311124455_change_status_column_to_non_null_column_type.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  helper.rs  subscriptions.rs
