[package]
name = "newsletter-api"
authors = ["Jeeva Ramu"]
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-api"

[dependencies]
actix-web = "4.4.1"
chrono = { version = "0.4.33", features = ["clock"] }
config = "0.14.0"
env_logger = "0.11.1"
log = "0.4.20"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
uuid = { version = "1.7.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
